Remove the Cart List

--- a/Nav/Navbar.html
+++ b/Nav/Navbar.html
@@ -20,7 +20,7 @@
             <div class="navbarCartSearchLogin">
                 <img class="cart" src="https://img.icons8.com/ios-glyphs/30/008080/shopping-cart--v1.png"
                     alt="shopping-cart--v1" />
-                    <span class="cartItems">0</span>
+                <span class="cartItems">0</span>
                 <button class="LoginNav">Login</button>
             </div>
         </div>
@@ -33,8 +33,10 @@
         <div class="subtotal">
             <p>Thank you for visiting our website.</p>
             <p>I hope your experience was great with us.</p>
-           <div class="lastSub"> <p>Subtotal</p>
-            <p class="lastSubAmt">0</p></div>
+            <div class="lastSub">
+                <p>Subtotal</p>
+                <p class="lastSubAmt">0</p>
+            </div>
         </div>
     </div>
 
@@ -61,10 +63,37 @@
             <li>Sitemap</li>
         </ul>
         <div class="footerOne">
-            <p>Information Related </p>
-            <p>About The Government </p>
+            <div class="info">
+                <p>Information Related </p>
+                <ul>
+                    <li>Agriculture</li>
+                    <li>Commerce</li>
+                    <li>Defence</li>
+                    <li>Agriculture</li>
+                    <li>Commerce</li>
+                    <li>Defence</li>
+                </ul>
+            </div>
+            <div class="info">
+                <p>About The Government </p>
+                <ul>
+                    <li>Culture</li>
+                    <li>Communication</li>
+                    <li>Education</li>
+                    <li>Culture</li>
+                    <li>Communication</li>
+                    <li>Education</li>
+                </ul>
+            </div>
+            <div class="portel">
+                <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/008080/portal.png" alt="portal"/>
+                <p>Open Data Portel</p>
+            </div>
         </div>
-    
+<div class="last">
+    <img width="64" height="64" src="https://img.icons8.com/hatch/64/008080/network-card.png" alt="network-card"/>
+    <p>This Portal is a <a href="">Mission Mode Project</a> under the National <a href="">E-Governance Plan,</a> and is owned, designed and developed by <a href="">National Informatics Centre (NIC), Ministry of Electronics & Information Technology,</a> Government of India. The content linked through NPI is owned and maintained by the respective Ministries/Departments.</p>
+</div>
     </footer>
 </body>
 <script src="/Nav/Navbar.js"></script>
